# bdbc-nwb-explorer

./: LICENSE  README.md  setup.cfg  setup.py
bdbc_nwb_explorer/: __init__.py  auxdata.py  filters.py  io.py  plot.py  process.py  view.py
bdbc_nwb_explorer/data/: AllenCCF_masks.h5  body_video.csv  daq.csv  eye_video.csv  face_video.csv
