[metadata]
name = bdbc-nwb-explorer
version = 0.2.0
author = "Keisuke Sehara"
author_email = keisuke.sehara@gmail.com
description = A tool set for easier exploration of NWB files in BraiDyn-BC repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/bdbc-nwb-explorer
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/bdbc-nwb-explorer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    h5py
    pandas
    pynwb

[options.entry_points]
console_scripts = 

[options.package_data]
bdbc_nwb_explorer = 
    data/*.csv

[flake8]
ignore =
    E501
    E221
    E712

